# NutriFit

./: CHATBOT_FEATURE.md  CHATBOT_READY.md  CHATBOT_SUMMARY.md  CHATBOT_UI_IMPROVEMENTS.md  COMPLETE_UI_OVERHAUL.md  FINAL_WEEK_FIX.md  LICENSE  LLM_CONVERSATIONAL_PLANS_SPEC.md  OLLAMA_VERIFIED.md  README.md  SESSION_SUMMARY.md  TASK10_IMPLEMENTATION_SUMMARY.md  TASK11_ERROR_HANDLING_SUMMARY.md  TASK12_IMPLEMENTATION_SUMMARY.md  TASK1_COMPLETE.md  TASK6_IMPLEMENTATION_SUMMARY.md  TASK8_IMPLEMENTATION_SUMMARY.md  TASK8_VERIFICATION_CHECKLIST.md  UI_FIXES_SUMMARY.md  UI_IMPROVEMENTS.md  UI_VISUAL_ENHANCEMENTS.md  UPGRADE_LLM.md  WEEK_NAVIGATION_FIX.md  WEEK_SYNC_FIX.md  pyproject.toml  test_date_logic.py  test_frontend_dates.html  test_message_rendering.html  test_new_week_logic.js  test_save_button.html  test_source_indicator.html  test_ui_fixes.html  test_week_navigation.html
.kiro/specs/llm-conversational-plans/: design.md  requirements.md  tasks.md
.kiro/specs/nutrifit-ai-assistant/: design.md  requirements.md  tasks.md
nutrifit/: __init__.py  api.py  cli.py  display.py  web.py
nutrifit/data/: __init__.py  recipes.py  workouts.py
nutrifit/engines/: __init__.py  chatbot_engine.py  embedding_engine.py  llm_engine.py  meal_planner.py  ollama_engine.py  openai_engine.py  workout_planner.py
nutrifit/models/: __init__.py  plan.py  progress.py  recipe.py  user.py  workout.py
nutrifit/parsers/: __init__.py  plan_parser.py
nutrifit/templates/: index.html
nutrifit/utils/: __init__.py  shopping_list.py  storage.py
nutrifit/web/: __init__.py  __main__.py  middleware.py  utils.py
nutrifit/web/routes/: __init__.py  chatbot.py  main.py  meal_plans.py  profile.py  progress.py  shopping.py  workout_plans.py
tests/: __init__.py  test_engines.py  test_error_handling.py  test_models.py  test_plan_parser.py  test_properties.py  test_utils.py
