[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrifit"
version = "0.1.0"
description = "AI-powered offline nutrition and workout assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NutriFit Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Health :: Fitness",
]
keywords = ["nutrition", "fitness", "ai", "meal-planning", "workout", "offline"]
dependencies = [
    "numpy>=1.24.0",
    "flask>=2.3.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
]
llm = [
    "llama-cpp-python>=0.2.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "llama-cpp-python>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
nutrifit-web = "nutrifit.web:run"

[project.urls]
Homepage = "https://github.com/tayxuenye/NutriFit"
Repository = "https://github.com/tayxuenye/NutriFit"
Issues = "https://github.com/tayxuenye/NutriFit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nutrifit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
